added niloy section

--- a/style/index.html
+++ b/style/index.html
@@ -23,7 +23,7 @@
         
 
         <div class=" Niloy-1">
-            <h1>Cool Dark UI Template for <br> Webflow Agencies!</h1>
+            <h1 class="raleway-normal">Cool Dark UI Template for <br> Webflow Agencies!</h1>
             <button class="stay-button">stay focused</button>
 
         </div>
@@ -31,7 +31,17 @@
     </header>
 
     <main>
+        <section class="niloy">
+            <div class="ghgh">
+                <h2>See It in Action</h2>
+                <p class=" raleway-normal clr">Explore the live preview and imagine your <br> brand in this bold new look.Launch Live Preview</p>
+                <button class="btn">Launch Live Preview</button>
+            </div>
 
+            <div class="img">
+                <img src="../Assets/wc-mini.png" alt="">
+            </div>
+        </section>
     </main>
 
     <footer>
