--- a/style/index.html
+++ b/style/index.html
@@ -93,7 +93,21 @@
     </main>
 
     <footer>
+      <div class="parent">
+        <h1 class=" inter-normal logo-size">Logo</h1>
+        <h6 class="add-color">Ready to elevate your online presence? Contact us today to discuss <br> your project and discover how we can bring your vision to life.</h6>
+    </div>
+      <div>
+        <ul class=" inter-normal list">
+            <li>Home</li>
 
+            <li>About</li>
+
+            <li>How it works</li>
+
+            <li>Service</li>
+        </ul>
+      </div>
     </footer>
 </body>
 </html>
