--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="styles/portfolio.css">
+    <link rel="stylesheet" href="./styles/portfolio.css">
 
 </head>
 <body>
@@ -39,7 +39,7 @@
             </div>
 
             <div class="img">
-                <img src="../Assets/wc-mini.png" alt="">
+                <img src="./Assets/wc-mini.png" alt="">
             </div>
            </section>
 
